crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_template_children__adjacent_control_flow_and_keyed_pattern_vapor_output.snap
---
source: crates/vize_atelier_vapor/src/tests_template_children.rs
expression: vapor_output(CONTROL_FLOW)
---
errors=[]
templates=["<aside>Aside</aside>", "<li> </li>", "<li>Empty</li>", "<div><!><!><p>Last</p></div>"]
code=
import { child as _child, next as _next, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, setClass as _setClass, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, createFor as _createFor, template as _template } from 'vue';
const t0 = _template("<aside>Aside</aside>", true)
const t1 = _template("<li> </li>")
const t2 = _template("<li>Empty</li>", true)
const t3 = _template("<div><!><!><p>Last</p></div>", true)

export function render(_ctx) {
  const n4 = t3()
  const n2 = _child(n4)
  const n3 = _next(n2)
  _setInsertionState(n4, n2)
  const n0 = _createIf(() => (_ctx.aside), () => {
    const n6 = t0()
    return n6
  })
  _setInsertionState(n4, n3)
  const n1 = _createIf(() => ((_ctx.status) === ('ready')), () => {
    const n8 = _createFor(() => (_ctx.items), (_for_item0) => {
      const n10 = t1()
      const x10 = _txt(n10)
      _renderEffect(() => {
        _setClass(n10, _for_item0.value.kind)
        _setText(x10, _toDisplayString(_for_item0.value.label))
      })
      return n10
    }, (item) => (item.id), 1)
    return n8
  }, () => {
    const n12 = t2()
    return n12
  })
  return n4
}
