crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_template_children__dynamic_sibling_inside_patterned_template_vapor_output.snap
---
source: crates/vize_atelier_vapor/src/tests_template_children.rs
expression: vapor_output(DYNAMIC_SIBLING)
---
errors=[]
templates=["<li>Ready</li>", "<div><!><li><span> </span></li><footer>Tail</footer></div>"]
code=
import { child as _child, next as _next, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, setClass as _setClass, setProp as _setProp, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<li>Ready</li>", true)
const t1 = _template("<div><!><li><span> </span></li><footer>Tail</footer></div>", true)

export function render(_ctx) {
  const n4 = t1()
  const n3 = _child(n4)
  const n1 = _next(n3)
  const n2 = _next(n1)
  const n7 = _child(n1)
  const x7 = _txt(n7)
  _setInsertionState(n4, n3)
  const n0 = _createIf(() => ((_ctx.status) === ('ready')), () => {
    const n6 = t0()
    return n6
  })
  _renderEffect(() => {
    _setProp(n1, "id", _ctx.plainId)
    _setText(x7, _toDisplayString(_ctx.label))
    _setClass(n2, _ctx.cls)
  })
  return n4
}
