crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_template_children__nested_text_run_inside_patterned_template_vapor_output.snap
---
source: crates/vize_atelier_vapor/src/tests_template_children.rs
expression: vapor_output(TEXT_RUN)
---
errors=[]
templates=["<li>Ready</li>", "<div><!>Before   after<footer>Tail</footer></div>"]
code=
import { child as _child, next as _next, toDisplayString as _toDisplayString, setText as _setText, setClass as _setClass, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<li>Ready</li>", true)
const t1 = _template("<div><!>Before   after<footer>Tail</footer></div>", true)

export function render(_ctx) {
  const n4 = t1()
  const n3 = _child(n4)
  const n1 = _next(n3)
  const n2 = _next(n1)
  _setInsertionState(n4, n3)
  const n0 = _createIf(() => ((_ctx.status) === ('ready')), () => {
    const n6 = t0()
    return n6
  })
  _renderEffect(() => {
    _setText(n1, "Before " + _toDisplayString(_ctx.label) + " after")
    _setClass(n2, _ctx.cls)
  })
  return n4
}
