crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_template_children__patterned_template_child_vapor_output.snap
---
source: crates/vize_atelier_vapor/src/tests_template_children.rs
expression: vapor_output(V_MATCH)
---
errors=[]
templates=["<li>Ready</li>", "<div><!><li>Plain</li><span> </span></div>"]
code=
import { child as _child, nthChild as _nthChild, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<li>Ready</li>", true)
const t1 = _template("<div><!><li>Plain</li><span> </span></div>", true)

export function render(_ctx) {
  const n3 = t1()
  const n2 = _child(n3)
  const n1 = _nthChild(n3, 2)
  const x1 = _txt(n1)
  _setInsertionState(n3, n2)
  const n0 = _createIf(() => ((_ctx.status) === ('ready')), () => {
    const n5 = t0()
    return n5
  })
  _renderEffect(() => _setText(x1, _toDisplayString(_ctx.x)))
  return n3
}
