crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_template_children__separated_text_runs_inside_patterned_template_vapor_output.snap
---
source: crates/vize_atelier_vapor/src/tests_template_children.rs
expression: vapor_output(SEPARATED_TEXT_RUNS)
---
errors=[]
templates=["<li>Ready</li>", "<div><!>Before  <em>mid</em>After  </div>"]
code=
import { child as _child, next as _next, nthChild as _nthChild, toDisplayString as _toDisplayString, setText as _setText, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<li>Ready</li>", true)
const t1 = _template("<div><!>Before  <em>mid</em>After  </div>", true)

export function render(_ctx) {
  const n4 = t1()
  const n3 = _child(n4)
  const n1 = _next(n3)
  const n2 = _nthChild(n4, 3)
  _setInsertionState(n4, n3)
  const n0 = _createIf(() => ((_ctx.status) === ('ready')), () => {
    const n6 = t0()
    return n6
  })
  _renderEffect(() => {
    _setText(n1, "Before " + _toDisplayString(_ctx.a))
    _setText(n2, "After " + _toDisplayString(_ctx.b))
  })
  return n4
}
